--- a/assets/sass/template_style/_header.scss
+++ b/assets/sass/template_style/_header.scss
@@ -30,6 +30,34 @@ header.header {
                 }
             }
         }
+
+
+        a.nav-link.buy_btn {
+            letter-spacing: 2px;
+            border: 1px solid #f6f7fb;
+            text-transform: uppercase;
+            padding: 7px 42px;
+            margin-left: 40px;
+            background-color: transparent;
+            background-image: -webkit-linear-gradient(315deg, #ff3366 50%, transparent 50%);
+            background-image: -o-linear-gradient(315deg, #ff3366 50%, transparent 50%);
+            background-image: linear-gradient(135deg, #ff3366 50%, transparent 50%);
+            background-repeat: no-repeat;
+            -webkit-transition: all 1s;
+            -o-transition: all 1s;
+            transition: all 1s;
+            background-size: 300% 300%;
+            background-position: 0% 0%;
+            border-color: #ff3366;
+            color: #fff;
+            font-weight: 600;
+            i {
+                margin-right: 10px;
+            }
+        }
+
+
+
         .select_lang {
             margin-right: 58px;
             a {
